[gd_scene load_steps=5 format=3 uid="uid://wsuqh6nxst1j"]

[ext_resource type="Script" uid="uid://lrtnxei0nkf5" path="res://assets/ui.gd" id="1_etwi0"]
[ext_resource type="Texture2D" uid="uid://bl70p1hloo8y4" path="res://content/breakout_ball.png" id="2_ohefe"]

[sub_resource type="SystemFont" id="SystemFont_pnrih"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_etwi0"]
default_font = SubResource("SystemFont_pnrih")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 5
Label/font_sizes/font_size = 35
RichTextLabel/font_sizes/normal_font_size = 50
RichTextLabel/fonts/normal_font = SubResource("SystemFont_pnrih")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_etwi0")
script = ExtResource("1_etwi0")

[node name="ScoreLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 17.0
offset_top = 1.0
offset_right = 74.0
offset_bottom = 70.0
text = "00"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallsRemaining" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 883.0
offset_top = 1.0
offset_right = 940.0
offset_bottom = 70.0
text = "03"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 182.0
offset_right = 571.0
offset_bottom = 231.0
text = "Get Ready!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ball" type="TextureRect" parent="ReadyLabel"]
layout_mode = 0
offset_left = 83.0
offset_top = 63.0
offset_right = 123.0
offset_bottom = 103.0
texture = ExtResource("2_ohefe")
stretch_mode = 2

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 182.0
offset_right = 571.0
offset_bottom = 231.0
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainUI" type="Control" parent="GameOverLabel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 60.5
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverLabel/PlayAgainUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.45
anchor_top = 0.56200004
anchor_right = 1.45
anchor_bottom = 0.56200004
offset_left = -48.0
offset_top = -6.4800014
offset_right = 48.0
offset_bottom = 6.5199986
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayAgainBtn" type="Button" parent="GameOverLabel/PlayAgainUI/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Play Again"

[node name="QuitBtn" type="Button" parent="GameOverLabel/PlayAgainUI/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Quit"
